--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 
 
-  <link rel="stylesheet" href="/assets/modules/bootstrap/css/bootstrap.min.css">
+  <!-- <link rel="stylesheet" href="/assets/modules/bootstrap/css/bootstrap.min.css"> -->
   <link rel="stylesheet" href="/assets/modules/fontawesome/css/all.min.css">
 
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
